<resources>
    <string name="app_name">NBFC CUSTOMER</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="exp">How would you</string>
    <string name="aboutus">About Us</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="success">Success</string>
    <string name="COMMON_ok">OK</string>
    <string name="menu_home">Home</string>
    <string name="privacy">Privacy Policy</string>
    <string name="information">Information collected</string>
    <string name="menu_gallery">Gallery</string>
    <string name="terms1">We are committed to protecting your Privacy</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="think">What do you think of our App?</string>
    <string name="share">What do you like to share with us?</string>
    <string name="term1">Slideshow</string>
    <string name="mscore">How likely would you recommend Mscore to your friends and colleagues?</string>

    <string name="passbook">Passbook</string>
    <string name="account_type">Account Type</string>
    <string name="available_balance">Available Balance</string>
    <string name="unclear_amount">Unclear Amount</string>
    <string name="executve">Executive Call Back</string>

    <string name="savings_bank">Savings Bank</string>
    <string name="current_account">Current Account</string>
    <string name="cash_credit">Cash Credit</string>

    <string name="select_account">Select account</string>
    <string name="select_sender">Select sender</string>
    <string name="add_new_sender">[add new sender]</string>
    <string name="select_receiver">Select receiver</string>
    <string name="add_new_receiver">[add new receiver]</string>
    <string name="make_payment">MAKE PAYMENT</string>
    <string name="Rs">\u20B9</string>
    <string name="needtochange"><u><b><i>Need To Change Payable Amount</i></b></u></string>
    <string name="needtopay"><u><b><i>Need To Pay Advance Amount</i></b></u></string>


    <string name="privacy1">We may collect any or all the information that you gives us depending on the type of
    transaction you enter into including your name,address together with data about your use of the website.Other information that
    may be needed from time to time to processes a request may also be collected as indicated on the website.</string>

    <string name="about1">We collect the minimum amount of information about you that is commensurate with providing
    you with a satisfactory service.This policy indicates the type of processes that may result in data being
    collected about you.Your use of this website gives us the right to collect that information.</string>

    <string name="BankKey">-500</string>
    <string name="BankHeader">PERFECT NBFC BANK HEAD OFFICE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="transactions">Streamlines transactions</string>
    <string name="singlecard">Enable a single point of contact for credit and debit</string>
    <string name="portfolio">Strengthen your loan portfolio</string>
    <string name="queue">Eliminate the long queues</string>
    <string name="purpose"><u>Purpose of Virtual Card:</u></string>
    <string name="reciever_account_type">Receiver account type</string>
    <string name="account_no">Account no</string>
    <integer name="viewfinder_border_length">60</integer>
    <integer name="viewfinder_border_width">4</integer>
    <string name="scan">Scan</string>
    <string name="amount">Amount</string>
    <string name="title_section3">Messages</string>
    <string name="clear">CLEAR</string>
    <string name="confirm_acc_no">Confirm account no:</string>

    <string name="transaction_update_days">Transaction Update(Days)</string>
    <string name="update_inerval">Update Interval</string>
    <string name="default_acc">Default Account</string>
    <string name="splash_screen">ON</string>
    <string name="add_sender">Add sender</string>
    <string name="address">Address</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="caps_mobile_no">MOBILE NUMBER</string>
    <string name="dob">DOB</string>
    <string name="add_receiver">Add receiver</string>
    <string name="sender_name">Sender Name</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="ifsc_code">IFS Code</string>
    <string name="register">REGISTER</string>
    <string name="mobile_no">Mobile number</string>
    <string name="consumer_no">Consumer no</string>
    <string name="bill_no">Bill no</string>
    <string name="remainder">\nOver Due Loans are shown in red colour. \n*  Due amount shown in this list is as of today. \n** You can set reminder on calender for due date intimation of deposits &amp; loans.</string>
</resources>