<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".2"
                android:src="@drawable/navback" />
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="15dp"
                android:text="Add Receiver"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


            <ImageView
                android:id="@+id/imgHome"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".2"
                android:padding="5dp"
                android:src="@drawable/ic_home" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll1"
        android:layout_below="@+id/relativeLayout1"
        android:background="@color/bgcolour"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black_75_per"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:paddingEnd="8dp"
                    android:paddingLeft="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/sender_name"
                    android:textColor="@color/text_secondary"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <Spinner
                    android:id="@+id/sender_name_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="2dp"
                    android:gravity="start"
                    android:popupBackground="#cccccc" />
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/receiver_name_inputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/receiver_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/receiver_name"
                    android:inputType="text"
                    android:maxLength="100"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/text_tertary"
                    android:textColorHint="@color/text_primary"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobile_number_inputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_no"
                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_primary"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ifsc_code_inputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ifsc_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ifsc_code"
                    android:inputType="text"
                    android:maxLength="11"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/text_tertary"
                    android:textColorHint="@color/text_primary"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/account_number_inputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/account_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_no"
                    android:inputType="numberPassword"
                    android:maxLength="20"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/text_tertary"
                    android:textColorHint="@color/text_primary"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_account_number_inputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/confirm_account_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_acc_no"
                    android:inputType="number"
                    android:maxLength="20"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/text_tertary"
                    android:textColorHint="@color/text_primary"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/btngreen"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>