<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolour"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:background="@color/colorPrimary"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".2"
                android:src="@drawable/navback" />
            <TextView
                android:id="@+id/tv_mycart"
                android:layout_width="0dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="15dp"
                android:text="Fund Transfer"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imgHome"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight=".2"
                android:padding="5dp"
                android:src="@drawable/ic_home" />

        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/linear_animation_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rltv_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_btn_bg_color"
            android:padding="10dp"
            android:visibility="gone">
            <TextView
                android:id="@+id/txt_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="An error was occured !!!...."
                android:textColor="@color/white"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:gravity="center_vertical"
                            android:paddingEnd="8dp"
                            android:paddingLeft="8dp"
                            android:paddingStart="8dp"
                            android:drawablePadding="5dp"
                            android:layout_gravity="center_vertical"
                            android:text="@string/select_account"
                            android:drawableLeft="@drawable/icp_acnt_no"
                            android:textColor="@color/text_secondary"
                            android:textSize="14sp"
                            android:textStyle="normal" />

                        <Spinner
                            android:id="@+id/spn_account_num"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginTop="2dp"
                            android:gravity="start"
                            android:popupBackground="#cccccc"
                            android:spinnerMode="dialog" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_gravity="center_vertical"
                                android:gravity="center_vertical"
                                android:paddingEnd="8dp"
                                android:paddingLeft="8dp"
                                android:paddingStart="8dp"
                                android:drawablePadding="5dp"
                                android:drawableLeft="@drawable/ic_select_sender"
                                android:text="@string/select_sender"
                                android:textColor="@color/text_secondary"
                                android:textSize="14sp"
                                android:textStyle="normal" />

                            <TextView
                                android:id="@+id/add_new_sender"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_gravity="center"
                                android:gravity="start"
                                android:paddingEnd="8dp"
                                android:paddingLeft="8dp"
                                android:paddingStart="8dp"
                                android:text="@string/add_new_sender"
                                android:textColor="@color/RoyalBlue"
                                android:textSize="16sp"
                                android:textStyle="normal"
                                tools:ignore="RelativeOverlap" />
                        </RelativeLayout>


                        <Spinner
                            android:id="@+id/sender_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dp"
                            android:gravity="start"
                            android:popupBackground="#cccccc" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_gravity="center"
                                android:gravity="center_vertical"
                                android:drawableLeft="@drawable/ic_select_reciever"
                                android:paddingEnd="8dp"
                                android:paddingLeft="8dp"
                                android:paddingStart="8dp"
                                android:drawablePadding="5dp"
                                android:text="@string/select_receiver"
                                android:textColor="@color/text_secondary"
                                android:textSize="14sp"
                                android:textStyle="normal" />

                            <TextView
                                android:id="@+id/add_new_receiver"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_gravity="center"
                                android:gravity="start"
                                android:paddingEnd="8dp"
                                android:paddingLeft="8dp"
                                android:paddingStart="8dp"
                                android:text="@string/add_new_receiver"
                                android:textColor="@color/RoyalBlue"
                                android:textSize="16sp"
                                android:textStyle="normal"
                                tools:ignore="RelativeOverlap" />
                        </RelativeLayout>


                        <Spinner
                            android:id="@+id/receiver_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dp"
                            android:gravity="start"
                            android:popupBackground="#cccccc" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
           <!-- <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp">-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:hint="Amount Payable"
                    android:drawableLeft="@drawable/rupee"
                    android:drawablePadding="5dp"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txt_amtinword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="left"
                    android:gravity="center_vertical"
                    android:paddingEnd="8dp"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="18dp"
                    android:paddingStart="8dp"
                    android:text=""
                    android:textColor="@color/RoyalBlue"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <!--                android:background="@drawable/custom_edt_txt_account_border"-->





            </LinearLayout>
          <!--  </androidx.cardview.widget.CardView>-->

          <!--  <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp">-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">
                <EditText
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_section3"
                    android:inputType="text"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/text_tertary"
                    android:textColorHint="@color/text_primary"
                    android:textSize="18sp" />
                </LinearLayout>
          <!--  </androidx.cardview.widget.CardView>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/mpin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="M-Pin"
                    android:inputType="phone"
                    android:maxLength="5"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/text_tertary"
                    android:textColorHint="@color/black"
                    android:textSize="18sp" />
                <Button
                    android:id="@+id/btn_forgot_mpin"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:backgroundTint="#61B383"
                    android:gravity="center"
                    android:text="Forgot Mpin"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:backgroundTint="#61B383"
                android:text="@string/make_payment"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>